--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "start-devdos": "nodemon . -q",
-    "start": "node ."
+    "start": "node index",
+    "start-devdos": "nodemon . -q"
   },
   "keywords": [],
   "author": "",
